--- a/style.css
+++ b/style.css
@@ -9,14 +9,11 @@ html,
 body {
     width: 100%;
     height: 100%;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Poppins, sans-serif;
     scroll-behavior: smooth;
+    line-height: 1.5;
 }
 
-img {
-    max-width: 100%;
-    display: block;
-}
 
 a {
     text-decoration: none;
@@ -28,38 +25,314 @@ ol {
     list-style: none;
 }
 
-button {
-    border: none;
-    background: none;
-    cursor: pointer;
+/* Navbar */
+.navbar {
+    width: 100%;
+    padding: 0.8rem 0;
+    background-color: #000;
 }
 
-input,
-textarea,
-button {
-    font-family: inherit;
+.navbar ul {
+    display: flex;
+    gap: 2rem;
+    justify-content: flex-end;
+    align-items: center;
+    margin-right: 5rem;
+    color: #fff;
 }
 
-.social-links {
-    margin-top: 1.5rem;
+.navbar a {
+    -webkit-text-fill-color: transparent;
+    -webkit-background-clip: text;
+    background-clip: text;
+    background-image: linear-gradient(90deg, #8ab4f8, #8ab4f8 50%, #fff 0);
+    background-position: -100%;
+    background-size: 200% 100%;
+    display: inline-block;
+    font-size: 18px;
+    padding: 5px 0;
+    position: relative;
+    transition: all .5s ease
+}
+
+.navbar a:before {
+    background: #8ab4f8;
+    bottom: -3px;
+    content: "";
+    display: block;
+    height: 3px;
+    left: 0;
+    position: absolute;
+    transition: all .3s ease-in-out;
+    width: 0
+}
+
+.navbar a:hover {
+    background-position: 0
+}
+
+.navbar a:hover:before {
+    width: 100%
+}
+
+
+/* hero */
+.hero-section {
+    color: #fff;
+    align-items: center;
+    font-weight: 300;
+    height: 100vmin;
+    justify-content: center;
+    margin: auto;
+    padding-top: 25vmin;
+    background-image: url(images/projects/52267.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.hero-section h3 {
+    -webkit-animation: rotate 1.5s ease-in 1;
+    animation: rotate 1.5s ease-in 1;
+    font-size: 45px;
+    margin-left: 5vh;
+    font-weight: 400;
+}
+
+@-webkit-keyframes rotate {
+    0% {
+        -webkit-transform: rotateY(90deg);
+        transform: rotateY(90deg)
+    }
+
+    to {
+        -webkit-transform: rotateY(0deg);
+        transform: rotateY(0deg)
+    }
+}
+
+@keyframes rotate {
+    0% {
+        -webkit-transform: rotateY(90deg);
+        transform: rotateY(90deg)
+    }
+
+    to {
+        -webkit-transform: rotateY(0deg);
+        transform: rotateY(0deg)
+    }
+}
+
+.hero-section a {
+    color: #fff;
+    font-size: 3rem;
+}
+
+.hero-section p {
+    font-size: 30px;
+}
+
+.hero-section p,
+.hero-section-icons {
+    margin-left: 5vh;
+
+}
+
+.hero-section-icons {
+    margin-top: 0.4rem;
     display: flex;
     gap: 20px;
-}
-
-.social-links a {
-    color: #ffffff;
-    /* or any text color based on your theme */
-    font-size: 1.4rem;
     transition: 0.3s ease;
+    align-items: center;
 }
 
-.social-links a:hover {
+.hero-section-icons a:hover {
     color: #00bcd4;
-    /* highlight color */
-    transform: translateY(-3px);
+    -webkit-animation: shake .5s;
+    animation: shake .5s;
+    -webkit-animation-iteration-count: 1;
+    animation-iteration-count: 1;
+    color: #8ab4f8
 }
 
-/* Project Section */
+@-webkit-keyframes shake {
+    0% {
+        -webkit-transform: translate(1px, 1px) rotate(0deg);
+        transform: translate(1px, 1px) rotate(0deg)
+    }
+
+    10% {
+        -webkit-transform: translate(-1px, -2px) rotate(-1deg);
+        transform: translate(-1px, -2px) rotate(-1deg)
+    }
+
+    20% {
+        -webkit-transform: translate(-3px) rotate(1deg);
+        transform: translate(-3px) rotate(1deg)
+    }
+
+    30% {
+        -webkit-transform: translate(3px, 2px) rotate(0deg);
+        transform: translate(3px, 2px) rotate(0deg)
+    }
+
+    40% {
+        -webkit-transform: translate(1px, -1px) rotate(1deg);
+        transform: translate(1px, -1px) rotate(1deg)
+    }
+
+    50% {
+        -webkit-transform: translate(-1px, 2px) rotate(-1deg);
+        transform: translate(-1px, 2px) rotate(-1deg)
+    }
+
+    60% {
+        -webkit-transform: translate(-3px, 1px) rotate(0deg);
+        transform: translate(-3px, 1px) rotate(0deg)
+    }
+
+    70% {
+        -webkit-transform: translate(3px, 1px) rotate(-1deg);
+        transform: translate(3px, 1px) rotate(-1deg)
+    }
+
+    80% {
+        -webkit-transform: translate(-1px, -1px) rotate(1deg);
+        transform: translate(-1px, -1px) rotate(1deg)
+    }
+
+    90% {
+        -webkit-transform: translate(1px, 2px) rotate(0deg);
+        transform: translate(1px, 2px) rotate(0deg)
+    }
+
+    to {
+        -webkit-transform: translate(1px, -2px) rotate(-1deg);
+        transform: translate(1px, -2px) rotate(-1deg)
+    }
+}
+
+@keyframes shake {
+    0% {
+        -webkit-transform: translate(1px, 1px) rotate(0deg);
+        transform: translate(1px, 1px) rotate(0deg)
+    }
+
+    10% {
+        -webkit-transform: translate(-1px, -2px) rotate(-1deg);
+        transform: translate(-1px, -2px) rotate(-1deg)
+    }
+
+    20% {
+        -webkit-transform: translate(-3px) rotate(1deg);
+        transform: translate(-3px) rotate(1deg)
+    }
+
+    30% {
+        -webkit-transform: translate(3px, 2px) rotate(0deg);
+        transform: translate(3px, 2px) rotate(0deg)
+    }
+
+    40% {
+        -webkit-transform: translate(1px, -1px) rotate(1deg);
+        transform: translate(1px, -1px) rotate(1deg)
+    }
+
+    50% {
+        -webkit-transform: translate(-1px, 2px) rotate(-1deg);
+        transform: translate(-1px, 2px) rotate(-1deg)
+    }
+
+    60% {
+        -webkit-transform: translate(-3px, 1px) rotate(0deg);
+        transform: translate(-3px, 1px) rotate(0deg)
+    }
+
+    70% {
+        -webkit-transform: translate(3px, 1px) rotate(-1deg);
+        transform: translate(3px, 1px) rotate(-1deg)
+    }
+
+    80% {
+        -webkit-transform: translate(-1px, -1px) rotate(1deg);
+        transform: translate(-1px, -1px) rotate(1deg)
+    }
+
+    90% {
+        -webkit-transform: translate(1px, 2px) rotate(0deg);
+        transform: translate(1px, 2px) rotate(0deg)
+    }
+
+    to {
+        -webkit-transform: translate(1px, -2px) rotate(-1deg);
+        transform: translate(1px, -2px) rotate(-1deg)
+    }
+}
+
+.hero-btn {
+    padding: 8px 16px;
+    font-size: 13px;
+    line-height: 1;
+    border: #4169e1 2px solid;
+    border-radius: 6px;
+    background-color: #8ab4f8;
+    color: #000;
+    font-weight: 700;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+.hero-btn:hover {
+    background-color: #4169e1;
+}
+
+
+/* Portfolio Section */
+
+.portfolio {
+    background-color: #fff;
+    color: #000;
+    font-size: 20px;
+    padding-bottom: 10vmin;
+}
+
+.portfolio-header {
+    text-align: center;
+    padding: 4rem 2rem 2rem 2rem;
+    font-weight: 300;
+}
+
+.portfolio-header h2 {
+    font-size: 2.5rem;
+    margin-bottom: 1rem;
+    font-weight: 500;
+}
+
+.portfolio-header p {
+    font-size: 1.1rem;
+    color: #555;
+}
+
+.portfolio-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+    gap: 2rem;
+}
+
+.portfolio-card {
+    padding: 15px;
+    border-radius: 10px;
+    background: #fff;
+    box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.08);
+}
+
+.portfolio-card img {
+    width: 100%;
+    height: 170px;
+    object-fit: cover;
+    border-radius: 8px;
+    border: 4px outset #000;
+}
+
 
 .project-buttons {
     display: flex;
@@ -79,7 +352,7 @@ button {
 }
 
 .code-btn {
-    background:#2563eb;
+    background: #2563eb;
     color: #fff;
 }
 
