--- a/style.css
+++ b/style.css
@@ -121,7 +121,7 @@ section {
     justify-content: center;
     margin: auto;
     padding-top: 25vmin;
-    background-image: url(images/projects/52267.jpg);
+    background-image: url(images/projects/jefferson-santos-9SoCnyQmkzI-unsplash.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
